<resources>
    <string name="app_name">TugasAkhirNew</string>
    <string name="tv_noNfc">There is no nfc can be used</string>
    <string name="useracc">Social media</string>
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">my name is Satrio, born in ponorogo, i born in 1998 and now i studied at amikom university in yogyakarta.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="contact1">Contact 1</string>
    <string name="contact2">Contact 2</string>
    <string name="contact3">Contact 3</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>